@@ -8,11 +8,6 @@ Config:
 
 - path (string):
     Full path to the output file.
-- format (string, optional):
-    Output format for the message to be written. Supports `json` or
-    `protobufstream`, both of which will serialize the entire `Message`
-    struct, or `text`, which will output just the payload string. Defaults to
-    ``text``.
 - prefix_ts (bool, optional):
     Whether a timestamp should be prefixed to each message line in the file.
     Defaults to ``false``.
@@ -34,6 +29,20 @@ Config:
     "flush_count" are combined. Allowed values are "AND" or "OR" (default is
     "AND").
 
+- encoder (string, required):
+    .. versionadded:: 0.6
+
+    Encoder plugin used to format the output.
+
+- format (string, optional):
+    .. deprecated:: 0.6
+        Use encoder instead.
+
+    Output format for the message to be written. Supports `json` or
+    `protobufstream`, both of which will serialize the entire `Message`
+    struct, or `text`, which will output just the payload string. Defaults to
+    ``text``.
+
 Example:
 
 .. code-block:: ini
@@ -46,3 +55,4 @@ Example:
     perm = "666"
     flush_count = 100
     flush_operator = "OR"
+    encoder = "PayloadEncoder"
