@@ -1,0 +1,14 @@
+.. _sandboxencoder:
+
+.. include:: ../config/encoders/sandbox.rst
+
+.. _sandboxencoders:
+
+Available Sandbox Encoders
+==========================
+
+Alert Encoder
+-------------
+.. include:: /../../sandbox/lua/encoders/alert.lua
+   :start-after: --[[
+   :end-before: --]]
