@@ -30,5 +30,6 @@ Features
 .. include:: module.rst
 .. include:: lpeg.rst
 .. include:: filter.rst
+.. include:: encoder.rst
 .. include:: development.rst
 .. include:: cookbook.rst
