@@ -21,28 +21,24 @@ import (
 	"fmt"
 	. "github.com/mozilla-services/heka/pipeline"
 	pipeline_ts "github.com/mozilla-services/heka/pipeline/testsupport"
+	"github.com/mozilla-services/heka/plugins"
 	plugins_ts "github.com/mozilla-services/heka/plugins/testsupport"
 	gs "github.com/rafrombrc/gospec/src/gospec"
 	"net/smtp"
 	"sync"
 	"testing"
-	//  "time"
+	//"time"
 )
 
 var sendCount int
 
 func testSendMail(addr string, a smtp.Auth, from string, to []string, msg []byte) error {
-	results := [][]byte{[]byte("From: heka@localhost.localdomain\r\nSubject: Heka [SmtpOutput]\r\nMIME-Version: 1.0\r\nContent-Type: text/plain; charset=\"utf-8\"\r\nContent-Transfer-Encoding: base64\r\n\r\nV3JpdGUgbWUgb3V0IHRvIHRoZSBuZXR3b3Jr"),
-		[]byte("From: heka@localhost.localdomai")}
+	results := [][]byte{[]byte("From: heka@localhost.localdomain\r\nSubject: Heka [SmtpOutput]\r\nMIME-Version: 1.0\r\nContent-Type: text/plain; charset=\"utf-8\"\r\nContent-Transfer-Encoding: base64\r\n\r\nV3JpdGUgbWUgb3V0IHRvIHRoZSBuZXR3b3Jr")}
 
 	switch sendCount {
 	case 0:
 		if bytes.Compare(msg, results[0]) != 0 {
 			return fmt.Errorf("Expected %s, Received %s", results[0], msg)
-		}
-	case 1:
-		if bytes.Compare(msg[:31], results[1]) != 0 {
-			return fmt.Errorf("Expected %s, Received %s", results[1], msg[:31])
 		}
 	default:
 		return fmt.Errorf("too many calls to SendMail")
@@ -70,6 +66,11 @@ func SmtpOutputSpec(c gs.Context) {
 	inChan := make(chan *PipelinePack, 1)
 	pConfig := NewPipelineConfig(nil)
 
+	encoder := new(plugins.PayloadEncoder)
+	econfig := encoder.ConfigStruct().(*plugins.PayloadEncoderConfig)
+	econfig.AppendNewlines = false
+	encoder.Init(econfig)
+
 	c.Specify("A SmtpOutput", func() {
 		smtpOutput := new(SmtpOutput)
 
@@ -84,27 +85,9 @@ func SmtpOutputSpec(c gs.Context) {
 		inChanCall.Return(inChan)
 		runnerName := oth.MockOutputRunner.EXPECT().Name().AnyTimes()
 		runnerName.Return("SmtpOutput")
+		oth.MockOutputRunner.EXPECT().Encoder().Return(encoder).AnyTimes()
 
 		c.Specify("send email payload message", func() {
-			err := smtpOutput.Init(config)
-			c.Assume(err, gs.IsNil)
-			smtpOutput.sendFunction = testSendMail
-
-			outStr := "Write me out to the network"
-			pack.Message.SetPayload(outStr)
-			go func() {
-				wg.Add(1)
-				smtpOutput.Run(oth.MockOutputRunner, oth.MockHelper)
-				wg.Done()
-			}()
-			inChan <- pack
-			close(inChan)
-			wg.Wait()
-		})
-
-		c.Specify("send email json message", func() {
-			config.PayloadOnly = false
-
 			err := smtpOutput.Init(config)
 			c.Assume(err, gs.IsNil)
 			smtpOutput.sendFunction = testSendMail
@@ -123,39 +106,39 @@ func SmtpOutputSpec(c gs.Context) {
 	})
 
 	// Use this test with a real server
-	//	c.Specify("A SmtpOutput Real", func() {
-	//		smtpOutput := new(SmtpOutput)
+	//  c.Specify("Real SmtpOutput output", func() {
+	//  	smtpOutput := new(SmtpOutput)
 	//
-	//		config := smtpOutput.ConfigStruct().(*SmtpOutputConfig)
-	//		config.SendTo = []string{"root"}
+	//  	config := smtpOutput.ConfigStruct().(*SmtpOutputConfig)
+	//  	config.SendTo = []string{"root"}
 	//
-	//		msg := pipeline_ts.GetTestMessage()
-	//		pack := NewPipelinePack(pConfig.InputRecycleChan())
-	//		pack.Message = msg
-	//		pack.Decoded = true
-	//		inChanCall := oth.MockOutputRunner.EXPECT().InChan().AnyTimes()
-	//		inChanCall.Return(inChan)
-	//		runnerName := oth.MockOutputRunner.EXPECT().Name().AnyTimes()
-	//		runnerName.Return("SmtpOutput")
+	//  	msg := pipeline_ts.GetTestMessage()
+	//  	pack := NewPipelinePack(pConfig.InputRecycleChan())
+	//  	pack.Message = msg
+	//  	pack.Decoded = true
+	//  	inChanCall := oth.MockOutputRunner.EXPECT().InChan().AnyTimes()
+	//  	inChanCall.Return(inChan)
+	//  	runnerName := oth.MockOutputRunner.EXPECT().Name().AnyTimes()
+	//  	runnerName.Return("SmtpOutput")
+	//      oth.MockOutputRunner.EXPECT().Encoder().Return(encoder).AnyTimes()
 	//
-	//		c.Specify("send email json message", func() {
-	//			config.PayloadOnly = false
+	//  	c.Specify("send a real email essage", func() {
 	//
-	//			err := smtpOutput.Init(config)
-	//			c.Assume(err, gs.IsNil)
+	//  		err := smtpOutput.Init(config)
+	//  		c.Assume(err, gs.IsNil)
 	//
-	//			outStr := "Write me out to the network"
-	//			pack.Message.SetPayload(outStr)
-	//			go func() {
-	//				wg.Add(1)
-	//				smtpOutput.Run(oth.MockOutputRunner, oth.MockHelper)
-	//				wg.Done()
-	//			}()
-	//			inChan <- pack
-	//			time.Sleep(1000) // allow time for the message output
-	//			close(inChan)
-	//			wg.Wait()
-	//			// manually check the mail
-	//		})
-	//	})
+	//  		outStr := "Write me out to the network"
+	//  		pack.Message.SetPayload(outStr)
+	//  		go func() {
+	//  			wg.Add(1)
+	//  			smtpOutput.Run(oth.MockOutputRunner, oth.MockHelper)
+	//  			wg.Done()
+	//  		}()
+	//  		inChan <- pack
+	//  		time.Sleep(1000) // allow time for the message output
+	//  		close(inChan)
+	//  		wg.Wait()
+	//  		// manually check the mail
+	//  	})
+	//  })
 }
